include/bindings.h

struct WrenVM {
  uint8_t _unused[0];
};
struct WrenForeignClassMethods {
  WrenForeignMethodFn allocate;
  WrenFinalizerFn finalize;
};
using WrenBindForeignClassFn = WrenForeignClassMethods(*)(WrenVM *vm,
                                                          const char *module,
                                                          const char *className);
struct WrenConfiguration {
  WrenReallocateFn reallocateFn;
  WrenResolveModuleFn resolveModuleFn;
  WrenLoadModuleFn loadModuleFn;
  WrenBindForeignMethodFn bindForeignMethodFn;
  WrenBindForeignClassFn bindForeignClassFn;
  WrenWriteFn writeFn;
  WrenErrorFn errorFn;
  uintptr_t initialHeapSize;
  uintptr_t minHeapSize;
  int heapGrowthPercent;
  void *userData;
};
struct WrenHandle {
  uint8_t _unused[0];
};
extern int wrenGetVersionNumber();
extern void wrenInitConfiguration(WrenConfiguration *configuration);
extern WrenVM *wrenNewVM(WrenConfiguration *configuration);
extern void wrenFreeVM(WrenVM *vm);
extern void wrenCollectGarbage(WrenVM *vm);
extern WrenInterpretResult wrenInterpret(WrenVM *vm, const char *module, const char *source);
extern WrenHandle *wrenMakeCallHandle(WrenVM *vm, const char *signature);
extern WrenInterpretResult wrenCall(WrenVM *vm, WrenHandle *method);
extern void wrenReleaseHandle(WrenVM *vm, WrenHandle *handle);
extern int wrenGetSlotCount(WrenVM *vm);
extern void wrenEnsureSlots(WrenVM *vm, int numSlots);
extern WrenType wrenGetSlotType(WrenVM *vm, int slot);
extern bool wrenGetSlotBool(WrenVM *vm, int slot);
extern const char *wrenGetSlotBytes(WrenVM *vm, int slot, int *length);
extern double wrenGetSlotDouble(WrenVM *vm, int slot);
extern void *wrenGetSlotForeign(WrenVM *vm, int slot);
extern const char *wrenGetSlotString(WrenVM *vm, int slot);
extern WrenHandle *wrenGetSlotHandle(WrenVM *vm, int slot);
extern void wrenSetSlotBool(WrenVM *vm, int slot, bool value);
extern void wrenSetSlotBytes(WrenVM *vm, int slot, const char *bytes, uintptr_t length);
extern void wrenSetSlotDouble(WrenVM *vm, int slot, double value);
extern void *wrenSetSlotNewForeign(WrenVM *vm, int slot, int classSlot, uintptr_t size);
extern void wrenSetSlotNewList(WrenVM *vm, int slot);
extern void wrenSetSlotNewMap(WrenVM *vm, int slot);
extern void wrenSetSlotNull(WrenVM *vm, int slot);
extern void wrenSetSlotString(WrenVM *vm, int slot, const char *text);
extern void wrenSetSlotHandle(WrenVM *vm, int slot, WrenHandle *handle);
extern int wrenGetListCount(WrenVM *vm, int slot);
extern void wrenGetListElement(WrenVM *vm, int listSlot, int index, int elementSlot);
extern void wrenSetListElement(WrenVM *vm, int listSlot, int index, int elementSlot);
extern void wrenInsertInList(WrenVM *vm, int listSlot, int index, int elementSlot);
extern int wrenGetMapCount(WrenVM *vm, int slot);
extern bool wrenGetMapContainsKey(WrenVM *vm, int mapSlot, int keySlot);
extern void wrenGetMapValue(WrenVM *vm, int mapSlot, int keySlot, int valueSlot);
extern void wrenSetMapValue(WrenVM *vm, int mapSlot, int keySlot, int valueSlot);
extern void wrenRemoveMapValue(WrenVM *vm, int mapSlot, int keySlot, int removedValueSlot);
extern void wrenGetVariable(WrenVM *vm, const char *module, const char *name, int slot);
extern bool wrenHasVariable(WrenVM *vm, const char *module, const char *name);
extern bool wrenHasModule(WrenVM *vm, const char *module);
extern void wrenAbortFiber(WrenVM *vm, int slot);
extern void *wrenGetUserData(WrenVM *vm);
extern void wrenSetUserData(WrenVM *vm, void *userData);