src/wren/mod.rs

#[test]
fn bindgen_test_layout_WrenForeignClassMethods() {
    const UNINIT: ::std::mem::MaybeUninit<WrenForeignClassMethods> =
        ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<WrenForeignClassMethods>(),
        16usize,
        concat!("Size of: ", stringify!(WrenForeignClassMethods))
    );
    assert_eq!(
        ::std::mem::align_of::<WrenForeignClassMethods>(),
        8usize,
        concat!("Alignment of ", stringify!(WrenForeignClassMethods))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).allocate) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(WrenForeignClassMethods),
            "::",
            stringify!(allocate)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).finalize) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(WrenForeignClassMethods),
            "::",
            stringify!(finalize)
        )
    );
}
pub type WrenBindForeignClassFn = ::std::option::Option<
    unsafe extern "C" fn(
        vm: *mut WrenVM,
        module: *const ::std::os::raw::c_char,
        className: *const ::std::os::raw::c_char,
    ) -> WrenForeignClassMethods,
>;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct WrenConfiguration {
    pub reallocateFn: WrenReallocateFn,
    pub resolveModuleFn: WrenResolveModuleFn,
    pub loadModuleFn: WrenLoadModuleFn,
    pub bindForeignMethodFn: WrenBindForeignMethodFn,
    pub bindForeignClassFn: WrenBindForeignClassFn,
    pub writeFn: WrenWriteFn,
    pub errorFn: WrenErrorFn,
    pub initialHeapSize: usize,
    pub minHeapSize: usize,
    pub heapGrowthPercent: ::std::os::raw::c_int,
    pub userData: *mut ::std::os::raw::c_void,
}
#[test]
fn bindgen_test_layout_WrenConfiguration() {
    const UNINIT: ::std::mem::MaybeUninit<WrenConfiguration> = ::std::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::std::mem::size_of::<WrenConfiguration>(),
        88usize,
        concat!("Size of: ", stringify!(WrenConfiguration))
    );
    assert_eq!(
        ::std::mem::align_of::<WrenConfiguration>(),
        8usize,
        concat!("Alignment of ", stringify!(WrenConfiguration))
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).reallocateFn) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(WrenConfiguration),
            "::",
            stringify!(reallocateFn)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).resolveModuleFn) as usize - ptr as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(WrenConfiguration),
            "::",
            stringify!(resolveModuleFn)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).loadModuleFn) as usize - ptr as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(WrenConfiguration),
            "::",
            stringify!(loadModuleFn)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).bindForeignMethodFn) as usize - ptr as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(WrenConfiguration),
            "::",
            stringify!(bindForeignMethodFn)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).bindForeignClassFn) as usize - ptr as usize },
        32usize,
        concat!(
            "Offset of field: ",
            stringify!(WrenConfiguration),
            "::",
            stringify!(bindForeignClassFn)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).writeFn) as usize - ptr as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(WrenConfiguration),
            "::",
            stringify!(writeFn)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).errorFn) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(WrenConfiguration),
            "::",
            stringify!(errorFn)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).initialHeapSize) as usize - ptr as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(WrenConfiguration),
            "::",
            stringify!(initialHeapSize)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).minHeapSize) as usize - ptr as usize },
        64usize,
        concat!(
            "Offset of field: ",
            stringify!(WrenConfiguration),
            "::",
            stringify!(minHeapSize)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).heapGrowthPercent) as usize - ptr as usize },
        72usize,
        concat!(
            "Offset of field: ",
            stringify!(WrenConfiguration),
            "::",
            stringify!(heapGrowthPercent)
        )
    );
    assert_eq!(
        unsafe { ::std::ptr::addr_of!((*ptr).userData) as usize - ptr as usize },
        80usize,
        concat!(
            "Offset of field: ",
            stringify!(WrenConfiguration),
            "::",
            stringify!(userData)
        )
    );
}
pub const WrenInterpretResult_WREN_RESULT_SUCCESS: WrenInterpretResult = 0;
pub const WrenInterpretResult_WREN_RESULT_COMPILE_ERROR: WrenInterpretResult = 1;
pub const WrenInterpretResult_WREN_RESULT_RUNTIME_ERROR: WrenInterpretResult = 2;
pub type WrenInterpretResult = ::std::os::raw::c_uint;
pub const WrenType_WREN_TYPE_BOOL: WrenType = 0;
pub const WrenType_WREN_TYPE_NUM: WrenType = 1;
pub const WrenType_WREN_TYPE_FOREIGN: WrenType = 2;
pub const WrenType_WREN_TYPE_LIST: WrenType = 3;
pub const WrenType_WREN_TYPE_MAP: WrenType = 4;
pub const WrenType_WREN_TYPE_NULL: WrenType = 5;
pub const WrenType_WREN_TYPE_STRING: WrenType = 6;
pub const WrenType_WREN_TYPE_UNKNOWN: WrenType = 7;
pub type WrenType = ::std::os::raw::c_uint;
extern "C" {
    pub fn wrenGetVersionNumber() -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn wrenInitConfiguration(configuration: *mut WrenConfiguration);
}
extern "C" {
    pub fn wrenNewVM(configuration: *mut WrenConfiguration) -> *mut WrenVM;
}
extern "C" {
    pub fn wrenFreeVM(vm: *mut WrenVM);
}
extern "C" {
    pub fn wrenCollectGarbage(vm: *mut WrenVM);
}
extern "C" {
    pub fn wrenInterpret(
        vm: *mut WrenVM,
        module: *const ::std::os::raw::c_char,
        source: *const ::std::os::raw::c_char,
    ) -> WrenInterpretResult;
}
extern "C" {
    pub fn wrenMakeCallHandle(
        vm: *mut WrenVM,
        signature: *const ::std::os::raw::c_char,
    ) -> *mut WrenHandle;
}
extern "C" {
    pub fn wrenCall(vm: *mut WrenVM, method: *mut WrenHandle) -> WrenInterpretResult;
}
extern "C" {
    pub fn wrenReleaseHandle(vm: *mut WrenVM, handle: *mut WrenHandle);
}
extern "C" {
    pub fn wrenGetSlotCount(vm: *mut WrenVM) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn wrenEnsureSlots(vm: *mut WrenVM, numSlots: ::std::os::raw::c_int);
}
extern "C" {
    pub fn wrenGetSlotType(vm: *mut WrenVM, slot: ::std::os::raw::c_int) -> WrenType;
}
extern "C" {
    pub fn wrenGetSlotBool(vm: *mut WrenVM, slot: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    pub fn wrenGetSlotBytes(
        vm: *mut WrenVM,
        slot: ::std::os::raw::c_int,
        length: *mut ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn wrenGetSlotDouble(vm: *mut WrenVM, slot: ::std::os::raw::c_int) -> f64;
}
extern "C" {
    pub fn wrenGetSlotForeign(
        vm: *mut WrenVM,
        slot: ::std::os::raw::c_int,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn wrenGetSlotString(
        vm: *mut WrenVM,
        slot: ::std::os::raw::c_int,
    ) -> *const ::std::os::raw::c_char;
}
extern "C" {
    pub fn wrenGetSlotHandle(vm: *mut WrenVM, slot: ::std::os::raw::c_int) -> *mut WrenHandle;
}
extern "C" {
    pub fn wrenSetSlotBool(vm: *mut WrenVM, slot: ::std::os::raw::c_int, value: bool);
}
extern "C" {
    pub fn wrenSetSlotBytes(
        vm: *mut WrenVM,
        slot: ::std::os::raw::c_int,
        bytes: *const ::std::os::raw::c_char,
        length: usize,
    );
}
extern "C" {
    pub fn wrenSetSlotDouble(vm: *mut WrenVM, slot: ::std::os::raw::c_int, value: f64);
}
extern "C" {
    pub fn wrenSetSlotNewForeign(
        vm: *mut WrenVM,
        slot: ::std::os::raw::c_int,
        classSlot: ::std::os::raw::c_int,
        size: usize,
    ) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn wrenSetSlotNewList(vm: *mut WrenVM, slot: ::std::os::raw::c_int);
}
extern "C" {
    pub fn wrenSetSlotNewMap(vm: *mut WrenVM, slot: ::std::os::raw::c_int);
}
extern "C" {
    pub fn wrenSetSlotNull(vm: *mut WrenVM, slot: ::std::os::raw::c_int);
}
extern "C" {
    pub fn wrenSetSlotString(
        vm: *mut WrenVM,
        slot: ::std::os::raw::c_int,
        text: *const ::std::os::raw::c_char,
    );
}
extern "C" {
    pub fn wrenSetSlotHandle(vm: *mut WrenVM, slot: ::std::os::raw::c_int, handle: *mut WrenHandle);
}
extern "C" {
    pub fn wrenGetListCount(vm: *mut WrenVM, slot: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn wrenGetListElement(
        vm: *mut WrenVM,
        listSlot: ::std::os::raw::c_int,
        index: ::std::os::raw::c_int,
        elementSlot: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn wrenSetListElement(
        vm: *mut WrenVM,
        listSlot: ::std::os::raw::c_int,
        index: ::std::os::raw::c_int,
        elementSlot: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn wrenInsertInList(
        vm: *mut WrenVM,
        listSlot: ::std::os::raw::c_int,
        index: ::std::os::raw::c_int,
        elementSlot: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn wrenGetMapCount(vm: *mut WrenVM, slot: ::std::os::raw::c_int) -> ::std::os::raw::c_int;
}
extern "C" {
    pub fn wrenGetMapContainsKey(
        vm: *mut WrenVM,
        mapSlot: ::std::os::raw::c_int,
        keySlot: ::std::os::raw::c_int,
    ) -> bool;
}
extern "C" {
    pub fn wrenGetMapValue(
        vm: *mut WrenVM,
        mapSlot: ::std::os::raw::c_int,
        keySlot: ::std::os::raw::c_int,
        valueSlot: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn wrenSetMapValue(
        vm: *mut WrenVM,
        mapSlot: ::std::os::raw::c_int,
        keySlot: ::std::os::raw::c_int,
        valueSlot: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn wrenRemoveMapValue(
        vm: *mut WrenVM,
        mapSlot: ::std::os::raw::c_int,
        keySlot: ::std::os::raw::c_int,
        removedValueSlot: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn wrenGetVariable(
        vm: *mut WrenVM,
        module: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
        slot: ::std::os::raw::c_int,
    );
}
extern "C" {
    pub fn wrenHasVariable(
        vm: *mut WrenVM,
        module: *const ::std::os::raw::c_char,
        name: *const ::std::os::raw::c_char,
    ) -> bool;
}
extern "C" {
    pub fn wrenHasModule(vm: *mut WrenVM, module: *const ::std::os::raw::c_char) -> bool;
}
extern "C" {
    pub fn wrenAbortFiber(vm: *mut WrenVM, slot: ::std::os::raw::c_int);
}
extern "C" {
    pub fn wrenGetUserData(vm: *mut WrenVM) -> *mut ::std::os::raw::c_void;
}
extern "C" {
    pub fn wrenSetUserData(vm: *mut WrenVM, userData: *mut ::std::os::raw::c_void);
}
